--- a/pages/pk/findCard/findCard.wxml
+++ b/pages/pk/findCard/findCard.wxml
@@ -43,7 +43,7 @@
             <view class="css pl-3vw pr-3vw" >
                 <view class="css pt-30 pb-30">
                     <!-- <view class="rus"> -->
-                        <view class="rus fs-30 fw-300 line-3-center">{{findUser.text}}</view>
+                        <view class="rus fs-32 fw-400 line-5-center" bindtap="showText" data-text="{{findUser.text}}">{{findUser.text}}</view>
                     <!-- </view> -->
 
                 </view>
@@ -52,17 +52,17 @@
                        
                           <swiper-item >
                                 <view class="rcc" style="height:65vw;width:84vw" >
-                                   <image class="br-10" style="height:65vw;width:84vw"  mode="aspectFill" src="{{findUser.img1}}"></image>
+                                   <image class="br-10" style="height:65vw;width:84vw"  mode="aspectFill" src="{{findUser.img1}}" bindtap="showImg" data-img="{{findUser.img1}}" data-img1="{{findUser.img1}}" data-img2="{{findUser.img2}}" data-img3="{{findUser.img3}}"></image>
                                 </view>
                           </swiper-item>
                           <swiper-item >
                                 <view class="rcc" style="height:65vw;width:84vw" >
-                                   <image class="br-10" style="height:65vw;width:84vw"  mode="aspectFill" src="{{findUser.img2}}"></image>
+                                   <image class="br-10" style="height:65vw;width:84vw"  mode="aspectFill" src="{{findUser.img2}}" bindtap="showImg" data-img="{{findUser.img2}}" data-img1="{{findUser.img1}}" data-img2="{{findUser.img2}}" data-img3="{{findUser.img3}}"></image>
                                 </view>
                           </swiper-item>
                           <swiper-item >
                                 <view class="rcc" style="height:65vw;width:84vw" >
-                                   <image class="br-10" style="height:65vw;width:84vw"  mode="aspectFill" src="{{findUser.img3}}"></image>
+                                   <image class="br-10" style="height:65vw;width:84vw"  mode="aspectFill" src="{{findUser.img3}}" bindtap="showImg" data-img="{{findUser.img3}}" data-img1="{{findUser.img1}}" data-img2="{{findUser.img2}}" data-img3="{{findUser.img3}}"></image>
                                 </view>
                           </swiper-item>
                     </swiper>
@@ -72,12 +72,12 @@
                        
                           <swiper-item >
                                 <view class="rcc" style="height:65vw;width:84vw" >
-                                   <image class="br-10" style="height:65vw;width:84vw"  mode="aspectFill" src="{{findUser.img1}}"></image>
+                                   <image class="br-10" style="height:65vw;width:84vw"  mode="aspectFill" src="{{findUser.img1}}" bindtap="showImg" data-img="{{findUser.img1}}" data-img1="{{findUser.img1}}" data-img2="{{findUser.img2}}" data-img3="{{findUser.img3}}"></image>
                                 </view>
                           </swiper-item>
                           <swiper-item >
                                 <view class="rcc" style="height:65vw;width:84vw" >
-                                   <image class="br-10" style="height:65vw;width:84vw"  mode="aspectFill" src="{{findUser.img2}}"></image>
+                                   <image class="br-10" style="height:65vw;width:84vw"  mode="aspectFill" src="{{findUser.img2}}" bindtap="showImg" data-img="{{findUser.img2}}" data-img1="{{findUser.img1}}" data-img2="{{findUser.img2}}" data-img3="{{findUser.img3}}"></image>
                                 </view>
                           </swiper-item>
                     </swiper>
@@ -87,7 +87,7 @@
                        
                           <swiper-item >
                                 <view class="rcc" style="height:65vw;width:84vw" >
-                                   <image class="br-10" style="height:65vw;width:84vw"  mode="aspectFill" src="{{findUser.img1}}"></image>
+                                   <image class="br-10" style="height:65vw;width:84vw"  mode="aspectFill" src="{{findUser.img1}}" bindtap="showImg" data-img="{{findUser.img1}}" data-img1="{{findUser.img1}}" data-img2="{{findUser.img2}}" data-img3="{{findUser.img3}}"></image>
                                 </view>
                           </swiper-item>
                     
