--- a/pages/pk/followers/followers.wxml
+++ b/pages/pk/followers/followers.wxml
@@ -28,7 +28,7 @@
                             <view class="css"> 
                             <view class="rus line-1-start fs-35 fw-650 c-word-6 f-shadow3" bindtap="userCenter" data-follower="{{follower}}">{{follower.userName}}</view>
                             </view>
-                            <view class="rcs"><view class="fs-25 fw-400 c-3">300个关注</view></view>
+                            <!-- <view class="rcs"><view class="fs-25 fw-400 c-3">300个关注</view></view> -->
                         </view>
                         <view class="rcc">
                             <view style="width: 10vw"></view>
