--- a/pages/pk/userFinds/userFinds.wxml
+++ b/pages/pk/userFinds/userFinds.wxml
@@ -1,6 +1,6 @@
 <!--pages/pk/userPk/userPk.wxml-->
 
-<view class="css {{findUsers.length > 0?'b-49':'b-white'}}" style="min-height:100vh">
+<view class="css " style="min-height:100vh">
 
 
 
@@ -8,17 +8,17 @@
 
 <view class="h-30"></view> 
 
-<view wx:if="{{findUsers.length > 0}}" class="css z2" >
+<view class="css z4" >
     <view class="css">
     
 
         <view class="css"  >
             <block wx:for="{{findUsers}}" wx:for-index="bindex" wx:for-item="findUser" >
-                <view class="css" style="padding-left:2vw;padding-right:2vw" >
+                <view class="css z4" style="padding-left:2vw;padding-right:2vw" >
 
-                    <view class="css b-white br-20 pt-20 pb-20" style="padding-left:4vw;padding-right:4vw" >
-                            <navigator class="rbc-nowrap pt-20 pb-20 " hover-class="none" url="/pages/pk/userFind/userFind?pkId={{findUser.pkId}}"> 
-                                <view class="rcs fs-30 fw-300">状态</view>
+                    <view class="css b-white br-20 pt-20 pb-20 z4" style="padding-left:4vw;padding-right:4vw" >
+                            <navigator class="rbc-nowrap pt-30 pb-30 " hover-class="none" url="/pages/pk/userFind/userFind?pkId={{findUser.pkId}}"> 
+                                <view class="rcs fs-30 fw-700">状态</view>
                                 <view class="rcc">
                                     <view hidden="{{findUser.statu.key!=2}}" class="rcc">
                                         <view class="rcs fs-23 fw-300 c-3 pl-10 pr-10 pb-5 pt-5 b-48 br-10">已打捞{{findUser.timeExpire}}</view>
@@ -31,13 +31,13 @@
                                     </view>
                                 </view>
                             </navigator>
-                            <view hidden="{{!findUser.startTime||!findUser.endTime}}" class="rbc-nowrap pt-20 pb-20"> 
-                                <view class="rcs w-300 fs-30 fw-300">时间</view>
+                            <view hidden="{{!findUser.startTime||!findUser.endTime}}" class="rbc-nowrap pt-30 pb-30"> 
+                                <view class="rcs w-300 fs-30 fw-700">时间</view>
                             
                                 <view class="rcc fs-30 fw-400 c-4 ">{{findUser.startTime}}~{{findUser.endTime}}</view>
                             </view>
-                            <navigator class="rbc-nowrap pt-20 pb-20" hover-class="none" url="/pages/pk/timepage/timepage?pkId={{findUser.pkId}}"> 
-                                <view class="rcs fs-30 fw-300">卡点</view>
+                            <navigator class="rbc-nowrap pt-30 pb-30" hover-class="none" url="/pages/pk/timepage/timepage?pkId={{findUser.pkId}}"> 
+                                <view class="rcs fs-30 fw-700">卡点</view>
                                 <view class="w-100"></view>
                                 <view class="rbc-nowrap" style="flex:1" >
                                     <view></view>
@@ -48,57 +48,57 @@
                                 </view>
                                 <image class="w-30 h-30" mode="aspectFit" src="/images/more.png"></image>
                             </navigator>
-                            <navigator class="css pt-20 pb-20 " hover-class="none" url="/pages/pk/userFind/userFind?pkId={{findUser.pkId}}">
+                            <navigator class="css pt-30 pb-30 " hover-class="none" url="/pages/pk/userFind/userFind?pkId={{findUser.pkId}}">
                                 <view class="rbc-nowrap "> 
                                     <view class="rcs ">
-                                        <view class="rcs fs-30 fw-300">打捞时长</view>
+                                        <view class="rcs fs-30 fw-700">打捞时长</view>
                                         <view class="w-20"></view>
                                     </view>
                                     <view class="rcc">
                                         <view class="rus fs-30 fw-300 c-4">{{findUser.findLength}}天</view>   
-                                        <view class="w-10"></view>
-                                        <image class="w-30 h-30" mode="aspectFit" src="/images/more.png"></image>
+                                        <!-- <view class="w-10"></view> -->
+                                        <!-- <image class="w-30 h-30" mode="aspectFit" src="/images/more.png"></image> -->
                                     </view>
 
                                 </view>
                             </navigator>
 
-                            <view class="rbc-nowrap pt-20 pb-20 " > 
-                                <view class="rcs fs-30 fw-300">场景描述</view>
+                            <view class="rbc-nowrap pt-30 pb-30 " > 
+                                <view class="rcs fs-30 fw-700">场景描述</view>
                                 <view class="w-100"></view>
                                 <view class="rbc-nowrap" style="flex:1" >
                                     <view></view>
-                                    <view class="css">
-                                        <view class="rus fs-30 fw-400 c-4  line-1-start">{{findUser.text}}</view>
+                                    <view class="css" bindtap="showText" data-text="{{findUser.text}}">
+                                        <view class="rus fs-30 fw-400 c-4  line-1-start" >{{findUser.text}}</view>
                                     </view>
                                     
                                 </view>
                                 <image class="w-30 h-30" mode="aspectFit" src="/images/more.png"></image>
                             </view>
 
-                            <navigator class="rbc-nowrap pt-20 pb-20" hover-class="none" url="/pages/pk/userFind/userFind?pkId={{findUser.pkId}}"> 
+                            <navigator class="rbc-nowrap pt-30 pb-30" hover-class="none" url="/pages/pk/userFind/userFind?pkId={{findUser.pkId}}"> 
                                 <view class="css">
-                                <view class="rcs fs-30 fw-300">图片</view>
+                                <view class="rcs fs-30 fw-700">图片</view>
                                 <view class="rcs fs-23 fw-300">最多三张图片</view>
                                 </view>  
                             
 
                                 <view class="rcc">
-                                <view class="rcc w-100 h-100 br-10 b-48">
-                                    <image class="{{findUser.img3?'w-100 h-100 br-10':'w-100 h-100'}}" mode="{{findUser.img3?aspectFill:aspectFit}}" src="{{findUser.img3?findUser.img3:'/images/img.png'}}"></image>
-                                </view>
+                                    <view hidden="{{!findUser.img3}}" class="rcc w-100 h-100 br-10 b-48">
+                                        <image class="w-100 h-100 br-10" mode="aspectFill" src="{{findUser.img3}}"></image>
+                                    </view>
                                 
-                                <view class="w-10"></view>
-                                <view class="rcc w-100 h-100 br-10 b-48">
-                                    <image class="{{findUser.img2?'w-100 h-100 br-10':'w-100 h-100'}}" mode="{{findUser.img2?aspectFill:aspectFit}}" src="{{findUser.img2?findUser.img2:'/images/img.png'}}"></image>
-                                </view>
-                                <view class="w-10"></view>
-                                <view class="rcc w-100 h-100 br-10 b-48">
-                                    <image class="{{findUser.img1?'w-100 h-100 br-10':'w-100 h-100'}}" mode="{{findUser.img1?aspectFill:aspectFit}}" src="{{findUser.img1?findUser.img1:'/images/img.png'}}"></image>
-                                </view>
+                                    <view  hidden="{{!findUser.img2}}" class="w-10"></view>
+                                    <view  hidden="{{!findUser.img2}}" class="rcc w-100 h-100 br-10 b-48">
+                                        <image class="w-100 h-100 br-10" mode="aspectFill" src="{{findUser.img2}}"></image>
+                                    </view>
+                                    <view  hidden="{{!findUser.img1}}" class="w-10"></view>
+                                    <view  hidden="{{!findUser.img1}}" class="rcc w-100 h-100 br-10 b-48">
+                                        <image class="w-100 h-100 br-10" mode="aspectFill" src="{{findUser.img1}}"></image>
+                                    </view>
                                 
-                                <view class="rcc w-10"></view>
-                                <image class="w-30 h-30" mode="aspectFit" src="/images/more.png"></image>
+                                    <view class="rcc w-10"></view>
+                                    <image class="w-30 h-30" mode="aspectFit" src="/images/more.png"></image>
                                 </view>
                             </navigator>                                 
                                                                             
@@ -113,27 +113,30 @@
 
     </view>
     <view hidden="{{!nomore}}" class="rcc p-50">
-            <view class="fs-30 fw-400 c-3-1 ">没有更多</view>
+            <view class="fs-30 fw-400 c-white ">没有更多</view>
     </view>
 
 </view>
-<view wx:else class="ccc z2 "  style="padding-top:20vh">
+<!-- <view wx:else class="ccc z4 "  style="padding-top:20vh">
     <view class="rcc">
         <image class="h-300 w-300" mode="aspectFit" src="{{emptyImage}}" ></image>
     </view>
     <view class="fs-30 fw-400 c-3">暂无打捞信息</view>
 
-</view>
+</view> -->
 
 </view>
-<view class="css customBar {{findUsers.length > 0?'b-49':'b-white'}} z2">
+
+<view class="pageback z2 b-black"  style="width:100vw;height:100vh;background-position: center;background-image: url({{backUrl}});background-repeat: no-repeat;background-size: 100% 100%; "></view>
+
+<view class="css customBar z4">
 <view class="rcs " style="height:{{top}}px"></view>
     <view class="rcs " style="height:32px">
 
     <view class="rcc h-32px ">
         <image class="h-40 w-40"  mode="aspectFit" src="/images/yu.png"></image>
         <view class="w-20"></view>
-        <view class="fs-30 fw-400">我的渔场</view>
+        <view class="fs-30 fw-400 c-white">我的渔场</view>
     </view>
 
     </view>
