--- a/pages/pk/drawPost/drawPost.wxml
+++ b/pages/pk/drawPost/drawPost.wxml
@@ -1,5 +1,5 @@
 <!--pages/pk/drawImg/drawImg.wxml-->
-<view class="css  b-drawPost" style="min-height:100vh;background-position: center;background-image: url({{imgBack}});background-repeat: no-repeat;background-size: 100% 100%;">
+<view class="css  b-drawPost" style="min-height:100vh">
 
     <view class="css" >
         <view class="rcs " style="height:{{top}}px"></view>
@@ -116,72 +116,7 @@
 
 <view>
 
-    <view class="coverAll" hidden="{{dialog.visible!=true}}"  catchtouchmove="return"></view>
-    <view class="css dialogTip" hidden="{{dialog.visible!=true}}">
-        <view class="css b-white br-20" style="background-position: top;background-image: url({{dialog.tipBack}});background-repeat: no-repeat;background-size: 100% auto; ">
-  
-            <view class="rcc">
-                <view class="rcc absolute">
-                    <image class="w-200 h-200 br-200 b-white" mode="aspectFit" src="{{dialog.tipImg}}"></image>
-                </view>
-            </view>
-            <view class="cbs">
-                <view class="h-150"></view>
-                <view></view>
-                <view class="rcc fs-33 fw-700 c-4 pb-50 pl-4vw pr-4vw line-3-center">{{dialog.title}}</view>
-            
-                <view class="rcc-wrap fs-28 fw-400 c-4 pl-4vw pr-4vw line-3-center">{{dialog.text}}</view>
-                
-                <view class="rcc pt-50 pb-50">
-                    <view class="rcc w-300 h-80 br-80 bTipColor fs-30 fw-400 c-white"  bindtap="dialog_confirm" >知道了</view>
-                </view>
-    
-            </view>
 
-        </view>
-        <!-- <view class="rcc p-100">
-            <image class="w-60 h-60" mode="aspectFit" src="/images/close1.png" bindtap="dialog_confirm"></image>
-        </view> -->
-    </view>
-    <view class="rcc tipDialog " hidden="{{tipDialog.visible!=true}}">
-        <view class="ccc levelDialog_view">
-            <view class="rcc">
-                <image class="tipDialog_image" mode="aspectFit" src="/images/warn.png" wx:if="{{tipDialog.level==='warn'}}"></image>
-                <image class="tipDialog_image" mode="aspectFit" src="/images/error.png" wx:elif="{{tipDialog.level==='error'}}"></image>
-                <image class="tipDialog_image" mode="aspectFit" src="/images/info.png" wx:else></image>
-            </view>
-            <view style="height:30rpx"></view>
-            <view class="rcc levelDialog_text">{{tipDialog.message}}</view>
-        </view>
-    </view>
-    <view class="coverAll" hidden="{{operateDialog.visible!=true}}"  catchtouchmove="return"></view>
-    <view class="css dialogTip" hidden="{{operateDialog.visible!=true}}">
-        <view class="css b-white br-20"  style="background-position: center;background-image: url({{operateDialog.tipBack}});background-repeat: no-repeat;background-size: 100% auto; ">
-            <view class="rcc">
-                <view class="rcc absolute">
-                    <image class="w-200 h-200 br-200 b-white" mode="aspectFit" src="{{operateDialog.tipImg}}"></image>
-                </view>
-            </view>
-            <view class="cbs">
-                <view class="h-150"></view>
-                <view></view>
-                <view class="rcc fs-33 fw-700 c-4 pb-50 pl-4vw pr-4vw line-3-center">{{operateDialog.title}}</view>
-            
-                <view class="rcc-wrap fs-28 fw-400 c-4  pl-4vw pr-4vw  line-3-center">{{operateDialog.text}}</view>
-                
-                <view class="rcc pt-50">
-                    <view class="rcc w-300 h-80 br-80 bTipColor fs-30 fw-400 c-white"  bindtap="operateDialog_confirm" >确定</view>
-                </view>
-                <view class="rcc p-30 fs-25 fw-400 c-3-1 "  bindtap="operateDialog_cancel">知道了</view>
-    
-            </view>
-
-
-        </view>
-        <view class="rcc p-100">
-            <image class="w-60 h-60" mode="aspectFit" src="/images/close1.png" bindtap="operateDialog_cancel"></image>
-        </view>
-    </view>
 
     <view class="cac pageLoadingDialog " hidden="{{pageLoadingDialog.visible!=true}}">
         <view class="ccc ">
@@ -206,22 +141,6 @@
         <view class="rcc labelLoadingDialog_view">
             <image class="labelLoadingDialog_image" mode="aspectFill" src="/images/loading.gif"></image>
             <view class="labelLoadingDialog_text">加载中</view>
-        </view>
-    </view>
-    <view class="rcc labelLoadingDialog " hidden="{{labelLoadingDialogSuccess.visible!=true}}">
-        <view class="rcc labelLoadingDialog_view">
-            <view class="rcc">
-                <image class="labelLoadingDialog_image" mode="aspectFit" src="/images/loadsuccess.png"></image>
-            </view>
-            <view class="labelLoadingDialog_text">加载成功</view>
-        </view>
-    </view>
-    <view class="rcc labelLoadingDialog " hidden="{{labelLoadingDialogError.visible!=true}}">
-        <view class="rcc labelLoadingDialog_view">
-            <view class="rcc">
-                <image class="labelLoadingDialog_image" mode="aspectFit" src="/images/loadfail.png"></image>
-            </view>
-            <view class="labelLoadingDialog_text">加载失败</view>
         </view>
     </view>
 
