--- a/pages/pk/findSomeOne/findSomeOne.wxml
+++ b/pages/pk/findSomeOne/findSomeOne.wxml
@@ -51,7 +51,7 @@
                                         <view class="css pl-3vw pr-3vw" >
                                             <view class="css pt-30 pb-30">
                                             
-                                                    <view class="rus fs-30 line-3-start">{{findUser.text}}</view>
+                                                    <view class="rcc fs-32 fw-400 line-5-center" bindtap="showText" data-text="{{findUser.text}}">{{findUser.text}}</view>
                                         
 
                                             </view>
@@ -59,29 +59,29 @@
                                                 <view wx:if="{{findUser.img1&&findUser.img2&&findUser.img3}}" class="css">
                                                     <view class="rbc">
                                                         <view class="rcc br-10" style="width:27.5vw;height:23vw">
-                                                            <image class="br-10" style="width:27.5vw;height:23vw" mode="aspectFill" src="{{findUser.img1}}"></image>
+                                                            <image class="br-10" style="width:27.5vw;height:23vw" mode="aspectFill" src="{{findUser.img1}}" bindtap="showImg" data-img="{{findUser.img1}}" data-img1="{{findUser.img1}}" data-img2="{{findUser.img2}}" data-img3="{{findUser.img3}}"></image>
                                                         </view>
                                                         <view class="rcc br-10" style="width:27.5vw;height:23vw">
-                                                            <image class="br-10" style="width:27.5vw;height:23vw" mode="aspectFill" src="{{findUser.img2}}"></image>
+                                                            <image class="br-10" style="width:27.5vw;height:23vw" mode="aspectFill" src="{{findUser.img2}}" bindtap="showImg" data-img="{{findUser.img2}}" data-img1="{{findUser.img1}}" data-img2="{{findUser.img2}}" data-img3="{{findUser.img3}}"></image>
                                                         </view>
                                                         <view class="rcc br-10" style="width:27.5vw;height:23vw">
-                                                            <image class="br-10" style="width:27.5vw;height:23vw" mode="aspectFill" src="{{findUser.img3}}"></image>
+                                                            <image class="br-10" style="width:27.5vw;height:23vw" mode="aspectFill" src="{{findUser.img3}}" bindtap="showImg" data-img="{{findUser.img3}}" data-img1="{{findUser.img1}}" data-img2="{{findUser.img2}}" data-img3="{{findUser.img3}}"></image>
                                                         </view>
                                                     </view>
                                                 </view>
                                                 <view wx:elif="{{findUser.img1&&findUser.img2&&!findUser.img3}}" class="css">
                                                     <view class="rbc">
                                                         <view class="rcc br-10" style="width:41.5vw;height:35vw">
-                                                            <image class="br-10" style="width:41.5vw;height:35vw" mode="aspectFill" src="{{findUser.img1}}"></image>
+                                                            <image class="br-10" style="width:41.5vw;height:35vw" mode="aspectFill" src="{{findUser.img1}}" bindtap="showImg" data-img="{{findUser.img1}}" data-img1="{{findUser.img1}}" data-img2="{{findUser.img2}}" data-img3="{{findUser.img3}}"></image>
                                                         </view>
                                                         <view class="rcc br-10" style="width:41.5vw;height:35vw">
-                                                            <image class="br-10" style="width:41.5vw;height:35vw" mode="aspectFill" src="{{findUser.img2}}"></image>
+                                                            <image class="br-10" style="width:41.5vw;height:35vw" mode="aspectFill" src="{{findUser.img2}}" bindtap="showImg" data-img="{{findUser.img2}}" data-img1="{{findUser.img1}}" data-img2="{{findUser.img2}}" data-img3="{{findUser.img3}}"></image>
                                                         </view>
                                                     </view>
                                                 </view>
                                                 <view wx:else class="css">
                                                     <view class="rcc br-10" style="width:84vw;height:60vw">
-                                                            <image class="br-10" style="width:84vw;height:60vw" mode="aspectFill" src="{{findUser.img1}}"></image>
+                                                            <image class="br-10" style="width:84vw;height:60vw" mode="aspectFill" src="{{findUser.img1}}" bindtap="showImg" data-img="{{findUser.img1}}" data-img1="{{findUser.img1}}" data-img2="{{findUser.img2}}" data-img3="{{findUser.img3}}"></image>
                                                     </view>
 
                                                 </view>
@@ -169,15 +169,7 @@
     
     </view>
     <view class="rcc">
-        <navigator class="rcc pb-30" hover-class="none" url="/pages/manage/approveFind/approveFind">
-                                <view  class=" w-100 h-100 br-100 rcc box100 b-white" >
-                                    <view class="rcc ">
-                                        <image class="rcc w-50 h-50 " mode="aspectFit" src="/images/collect.png"></image>
-                                    </view>
 
-                                </view>
-        </navigator>
-        <view class="w-70"></view>
 
         <navigator class="rcc pb-30" hover-class="none" url="/pages/pk/userFind/userFind?pkId={{pkId}}">
                                 <view  class=" w-100 h-100 br-20 rcc box100 b-white" >
