--- a/pages/pk/singleLocation/singleLocation.wxml
+++ b/pages/pk/singleLocation/singleLocation.wxml
@@ -163,7 +163,7 @@
                                                                             <view class="w-30 "></view>
                                                                             <view class="rcc pt-40 pb-40">
                                                                                     <view class="w-20 h-30 l-line"></view>    
-                                                                                    <view class="rcc border-locate pl-10 pr-10 pt-5 pb-5 br-10 " >
+                                                                                    <view class="rcc border-locate pl-10 pr-10 pt-5 pb-5 br-10 " bindtap="showLocation" data-pk="{{pk}}" >
                                                                                                             <image class="rcc w-25 h-25" mode="aspectFit" src="/images/way.png"></image>
                                                                                                             <view class="w-10 "></view>
                                                                                                             <view class="rcc fs-23 fs-300 c-4">距离 {{lengthStr}}</view>
@@ -221,11 +221,10 @@
             </view>
         </view>
         <view class="rbc-nowrap pt-20 pb-20" bindtap="editSign">
-            <view class="rcs w-300 fs-30 fw-400">签名</view>
-   
-            <view class="rus">
-              <view class="css" style="flex:1">
-                <view class="rus fs-30 fw-300 c-4 line-1-start">{{sign}}</view>
+            <view class="rcs w-300 fs-30 fw-400 w-100">签名</view>
+            <view class="rcc">
+              <view class="css" style="flex:1" bindtap="showText" data-text="{{sign}}">
+                <view class="rus fs-30 fw-300 c-4  line-1-start">{{sign}}</view>
               </view>
               <image class="w-30 h-30" mode="aspectFit" src="/images/more.png"></image>
             </view>
@@ -251,7 +250,7 @@
         <view class="rbc-nowrap pt-20 pb-20">
             <view class="rcs w-300 fs-30 fw-400">详细地址</view>
             <view class="rcc">
-              <view class="css" style="flex:1">
+              <view class="css" style="flex:1" bindtap="showText" data-text="{{address}}">
                 <view class="rus fs-30 fw-300 c-4 line-1-start">{{address}}</view>
               </view>
               <image class="w-30 h-30" mode="aspectFit" src="/images/more.png"></image>
@@ -397,144 +396,6 @@
             <view class="labelLoadingDialog_text">加载失败</view>
         </view>
     </view>
-    <view bindtap="_selectionDialog_hide" class="coverAll" hidden="{{selectionDialog.visible!=true}}"></view>
-    <view class="{{selectionDialog._selectionDialog_layout}}" hidden="{{selectionDialog.visible!=true}}">
-        <view class="css selectionDialog_BT " wx:if="{{selectionDialog.style===1||selectionDialog.style===5}}">
-            <view class="rcc selectionDialog_BT1_title">选项</view>
-            <view style="height:20rpx"></view>
-            <view class="rac">
-                <view bindtap="_selectDialog_choose" class="ccc" data-name="{{item.name}}" wx:for="{{selectionDialog.items}}" wx:key="*idx1">
-                    <image class="selectionDialog_item_image" mode="aspectFit" src="{{item.icon}}"></image>
-                    <view style="height:20rpx"></view>
-                    <view class="selectionDialog_BT1_title">{{item.name}}</view>
-                </view>
-            </view>
-        </view>
-        <view class="css selectionDialog_RL" wx:elif="{{selectionDialog.style===2||selectionDialog.style===3}}">
-            <view class="rcc selectionDialog_RL_title">选项</view>
-            <view bindtap="_selectDialog_choose" class="ccc selectionDialog_RL_item" data-name="{{item.name}}" wx:for="{{selectionDialog.items}}" wx:key="*idx1">
-                <image class="selectionDialog_item_image" mode="aspectFit" src="{{item.icon}}"></image>
-                <view style="height:10rpx"></view>
-                <view class="selectionDialog_RL_title">{{item.name}}</view>
-            </view>
-        </view>
-        <view class="css selectionDialog_BT" wx:else>
-            <view class="rcs selectionDialog_BT2_title">选项</view>
-            <view bindtap="_selectDialog_choose" class="rcs selectionDialog_BT2_item" data-name="{{item.name}}" wx:for="{{selectionDialog.items}}" wx:key="idx1">
-                <image class="selectionDialog_item_image" mode="aspectFit" src="{{item.icon}}"></image>
-                <view style="width:30rpx"></view>
-                <view class="selectionDialog_BT1_title">{{item.name}}</view>
-            </view>
-        </view>
-    </view>
-    <view bindtap="_editImageDialog_closeEdit" catchtouchmove="return" class="rcc coverAll" hidden="{{editImageDialog.visible!=true}}">
-    
-
-        <view catchtap="return" class="css pl-8vw pr-8vw z30 br-20  b-white"  style="width:70vw" >
-                <!-- <view class="rbc-nowrap">
-                    <view class="rcc">
-                        <image class="w-60 h-60 br-10" mode="aspectFit" src="{{user.imgUrl}}"></image>
-                    </view>
-                    <view class="w-20"></view>
-                    <view class="css" style="flex:1">
-                        <view class="rus line-1-start fs-30 fw-400 ">{{user.userName}}</view>
-                    </view>
-                    <view class="w-100"></view>
-                    <view class="ccc p-20 " bindtap="{{(editImageDialog.text && editImageDialog.images[0])?'_editImageDialog_confirm':''}}">
-                        <view  class="{{(editImageDialog.text && editImageDialog.images[0])?'rcc c-5 fs-25 fw-700':'rcc c-3-1 fs-25 fw-700'}}">确定</view>
-                    </view>
-                </view> -->
-                <!-- <view class="rbc">
-                    <view class="fs-30 fw-400 c-3">{{editImageDialog.images.length}} 张</view>
-                     <view class="fs-20 fw-400 c-3">还可输入{{editImageDialog.left}}个字</view>
-                </view> -->
-
-                <view class="rcc pt-50 pb-50 fs-30 fw-700">编辑内容</view>
-                <view class="css  ">
-
-                    
-                    <view class="css ">
-                        <textarea adjustPosition="true" bindinput="_editImageDialog_input" class="t19-1-edit"  style="height:20vw;width:70vw" cursorSpacing="50" fixed="true" maxlength="50" placeholder="{{editImageDialog._default_edit_text}}" value="{{editImageDialog.text}}"></textarea>
-                    </view>
-                    <view class="h-20"></view>
-                    <view class="rcc">
-                        <image class="br-10" mode="aspectFill" src="{{editImageDialog.images[0]}}" style="height:70vw;width:70vw" ></image>
-                    </view>
-
-                </view>
-
-                <view class="ccc pt-50 pb-50" bindtap="{{(editImageDialog.text && editImageDialog.images[0])?'_editImageDialog_confirm':''}}">
-                    <view  class="{{(editImageDialog.text && editImageDialog.images[0])?'rcc c-5 fs-25 fw-700':'rcc c-3-1 fs-25 fw-700'}}">确定</view>
-                </view>
-        </view>
-
-    
-    
-    </view>
-    <view bindtap="" catchtouchmove="return" class="coverAll" hidden="{{editTextDialog.visible!=true}}"></view>
-    <view catchtouchmove="return" class="css editTextDialog" hidden="{{editTextDialog.visible!=true}}">
-        <view class="css editTextDialog_view ">
-            <view class="rbc">
-                <view class="t19-13-1" style="padding-left:15rpx">{{editTextDialog.title}}</view>
-                <view class="rcc"></view>
-            </view>
-            <view class="rcc t19-2">
-                <textarea adjustPosition="true" bindinput="_editTextDialog_input" class=" t19-1-2" maxlength="{{editTextDialog.maxLength}}" placeholder="{{editTextDialog.placeholder}}" value="{{editTextDialog.text}}"></textarea>
-            </view>
-            <view class="rbc">
-                <view>
-                    <view class="t19-7-1" hidden="{{editTextDialog.maxLength>editTextDialog.text.length}}">内容已达最大长度!</view>
-                </view>
-                <view class="t19-6" style="padding-right:50rpx">{{editTextDialog.text.length}}/{{editTextDialog.maxLength}}</view>
-            </view>
-            <view style="height:20rpx"></view>
-            <view class="rac">
-                <view bindtap="_editTextDialog_close" class="rcc shortTextDialog_cancel" hoverClass="dialog_cancel_hoverClass">取消</view>
-                <view bindtap="_editTextDialog_confirm" class="rcc shortTextDialog_confirm" hoverClass="dialog_confirm_hoverClass">确定</view>
-            </view>
-            <view class="t7-5-2" style="height:35rpx"></view>
-        </view>
-    </view>
-    <view bindtap="" catchtouchmove="return" class="coverAll" hidden="{{shortTextDialog.visible!=true}}"></view>
-    <view class="rcc shortTextDialog" hidden="{{shortTextDialog.visible!=true}}">
-        <view class="css shortTextDialog_view">
-            <view class="rcc shortTextDialog_title">{{shortTextDialog.title}}</view>
-            <view style="height:60rpx"></view>
-            <view class="css">
-                <input bindinput="_shortTextDialog_input" class="shortTextDialog_input" maxlength="{{shortTextDialog.maxLength}}" placeholder="点击输入最多{{shortTextDialog.maxLength}}位数字" value="{{shortTextDialog.text}}"></input>
-            </view>
-            <view style="height:60rpx"></view>
-            <view class="rac">
-                <view bindtap="_shortTextDialog_close" class="rcc shortTextDialog_cancel" hoverClass="dialog_cancel_hoverClass">取消</view>
-                <view bindtap="_shortTextDialog_confirm" class="rcc shortTextDialog_confirm" hoverClass="dialog_confirm_hoverClass" wx:if="{{shortTextDialog.text.length>0}}">确定</view>
-                <view class="rcc shortTextDialog_cancel" wx:else>确定</view>
-            </view>
-        </view>
-    </view>
-    <view bindtap="" catchtouchmove="return" class="cover104" hidden="{{editNumberDialog.visible!=true}}"></view>
-    <view class="rcc shortTextDialog" hidden="{{editNumberDialog.visible!=true}}">
-        <view class="css shortTextDialog_view">
-            <view class="rcc shortTextDialog_title">{{editNumberDialog.title}}</view>
-            <view style="height:60rpx"></view>
-            <view class="css">
-                <input bindinput="_editNumberDialog_input" class="createEditNumberDialog_input" maxlength="{{editNumberDialog.maxLength}}" placeholder="点击输入最多{{editNumberDialog.maxLength}}位数字" type="number" value="{{editNumberDialog.text}}"></input>
-            </view>
-            <view style="height:60rpx"></view>
-            <view class="rac">
-                <view bindtap="_editNumberDialog_close" class="rcc shortTextDialog_cancel">取消</view>
-                <view bindtap="_editNumberDialog_confirm" class="rcc shortTextDialog_confirm " hoverClass="dialog_confirm_hoverClass" wx:if="{{editNumberDialog.text.length>0}}">确定</view>
-                <view class="rcc  shortTextDialog_cancel" wx:else>确定</view>
-            </view>
-        </view>
-    </view>
-
-
-
-    <view bindtap="_showPkDialog_hide" catchtouchmove="return" class="coverAll-1 z2" hidden="{{showPkDialog.visible!=true}}" ></view>
-
-
-
-
 
 
 
