--- a/style/custom2.wxss
+++ b/style/custom2.wxss
@@ -1110,7 +1110,7 @@ mw-200{
   background-color: #e57e00;
 }
 .b-drawPost{
-  background-color: rgb(37, 35, 35);
+  background-color: rgb(0, 0, 0);
 }
 .b-publish1{
   background-image: linear-gradient(to bottom, #00c0f0ea , #00b1dde8  );
@@ -1424,6 +1424,10 @@ mw-200{
 }
 .br-50{
   border-radius: 50rpx;
+}
+.lbr-45{
+  border-top-left-radius: 45rpx;
+  border-bottom-left-radius: 45rpx;
 }
 .br-60{
   border-radius: 60rpx;
